--- a/Code/Data_Discovrery_Wages.ipynb
+++ b/Code/Data_Discovrery_Wages.ipynb
@@ -13,21 +13,189 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Import some useful packages, variables, definitions.💡"
+    "### Overview:"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**To-Do's:**\n",
+    "* *Finish Data Gathering and Catalog Discovery for:*\n",
+    " 1. Wage Data\n",
+    " 2. Employment Data\n",
+    " 3. Trade Data\n",
+    " 4. FDI and FPI Data\n",
+    " 5. Decomposed Output Data\n",
+    " 6. Penn Table *(Controls)*\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Environment:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
     "#Packages\n",
+    "\n",
     "import pandas as pd\n",
     "import os\n",
-    "#deneme\n",
+    "import eurostat\n",
+    "\n",
     "#Constants\n",
-    "cwd=os.getcwd()[:-4]\n"
+    "\n",
+    "dl=os.getcwd()[:-32]+'Data/Technology-Trade-Employment'"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Wages Data"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Before discovering the data it is convenient to explain the datasets that will be used in the analysis briefly.\n",
+    "Studies conducted in the field of wage premia generally rely on population surveys to analyze premiums on more categories such as gender, age group, economic activity, and most importantly, occupation. European-level population surveys are conducted once in 4 years accessible from 2002 to 2018 with the names: *\"European Community Household Panel (ECHP)\" and \"European Union Statistics on Income and Living Conditions (EU-SILC)\"*. It is important to mention that the original, or raw, survey data is disaggregated *(individual level)* and not open for public access. It is possible to obtain the so-called, **microdata** with the proper request, though due to extended delivery time and short thesis deadline, this research will be conducted by aggregated, *(by certain categories)* datasets of **Eurostat**.\n",
+    "\n",
+    "After browsi̇ng the Eurostat Database, I ended up with the following three different data sets for the years 2002, 2006, 2010, 2014, 2018:\n",
+    "\n",
+    "* Mean hourly earnings by sex, age, occupation for,\n",
+    "* Mean hourly earnings by sex, economic activity and occupation *(Not available for 2002)*,\n",
+    "* Mean hourly earnings by economic activity, sex, educational attainment level\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "For potential problems, it is good to check the data quality prior. Thereby we will import the data including the Flags which are:\n",
+    " * b = break in time series, c = confidential, d = definition differs, see metadata, e = estimated, f = forecast, n = not significant, p = provisional, r = revised, s = Eurostat estimate, u = low reliability, z = not applicable.\n",
+    "\n",
+    "I will check  ***n,p,u*** among these flags for wage and employment data from Eurostat and record it to the data catalog. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['freq', 'age', 'unit', 'isco88', 'indic_se', 'sex', 'geo']"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "eurostat.get_pars('EARN_SES_AGT14')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2002_flag\n",
+       "     34270\n",
+       "s     2016\n",
+       "Name: 2002_flag, dtype: int64"
+      ]
+     },
+     "execution_count": 53,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df=eurostat.get_data_df('EARN_SES_AGT14',True)\n",
+    "df.groupby([\"2002_flag\"])[\"2002_flag\"].count()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "freq                       object\n",
+       "age                        object\n",
+       "unit                       object\n",
+       "isco88                     object\n",
+       "indic_se                   object\n",
+       "sex                        object\n",
+       "geo\\TIME_PERIOD            object\n",
+       "2002_value                float64\n",
+       "2002_flag                  object\n",
+       "f                  string[python]\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 56,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.dtypes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Convert the \"2002_flag\" column to string type\n",
+    "df['f'] = df['2002_flag'].astype(\"string\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "geo\\TIME_PERIOD\n",
+       "EA12    672\n",
+       "EU15    672\n",
+       "EU25    672\n",
+       "Name: unit, dtype: int64"
+      ]
+     },
+     "execution_count": 67,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.query('f == \"s\"').groupby(['geo\\TIME_PERIOD'])['unit'].count()"
    ]
   },
   {
@@ -40,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -61,13 +229,13 @@
        "dtype: object"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df02 = pd.read_csv(f'{cwd}Data/Eurostat/csv/EARN_SES_AGT14.csv')\n",
+    "df02 = pd.read_csv(f'{dl}/Eurostat/csv/EARN_SES_AGT14.csv')\n",
     "df02.dtypes"
    ]
   },
