--- a/Code/Data_Discovrery_Wages.ipynb
+++ b/Code/Data_Discovrery_Wages.ipynb
@@ -126,6 +126,32 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'db' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[12], line 4\u001b[0m\n\u001b[1;32m      1\u001b[0m wdb1\u001b[39m=\u001b[39m [\u001b[39m\"\u001b[39m\u001b[39mEARN_SES06_14\u001b[39m\u001b[39m\"\u001b[39m,\u001b[39m\"\u001b[39m\u001b[39mEARN_SES10_14\u001b[39m\u001b[39m\"\u001b[39m,\u001b[39m\"\u001b[39m\u001b[39mEARN_SES14_14\u001b[39m\u001b[39m\"\u001b[39m,\u001b[39m\"\u001b[39m\u001b[39mEARN_SES18_14\u001b[39m\u001b[39m\"\u001b[39m]\n\u001b[1;32m      3\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mutilities\u001b[39;00m \u001b[39mas\u001b[39;00m \u001b[39mu\u001b[39;00m\n\u001b[0;32m----> 4\u001b[0m u\u001b[39m.\u001b[39;49mwageget(wdb1)\n",
+      "File \u001b[0;32m~/Github/Technology Trade Employment/Code/utilities.py:19\u001b[0m, in \u001b[0;36mwageget\u001b[0;34m(bd)\u001b[0m\n\u001b[1;32m     17\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mwageget\u001b[39m(bd):\n\u001b[1;32m     18\u001b[0m     df\u001b[39m=\u001b[39mpd\u001b[39m.\u001b[39mDataFrame()\n\u001b[0;32m---> 19\u001b[0m     \u001b[39mfor\u001b[39;00m ds \u001b[39min\u001b[39;00m db:\n\u001b[1;32m     20\u001b[0m         dftemp \u001b[39m=\u001b[39m pd\u001b[39m.\u001b[39mDataFrame({\n\u001b[1;32m     21\u001b[0m             \u001b[39m'\u001b[39m\u001b[39mDataset\u001b[39m\u001b[39m'\u001b[39m: [ds \u001b[39mfor\u001b[39;00m i \u001b[39min\u001b[39;00m eurostat\u001b[39m.\u001b[39mget_pars(ds)],\n\u001b[1;32m     22\u001b[0m             \u001b[39m'\u001b[39m\u001b[39mYear\u001b[39m\u001b[39m'\u001b[39m: [ \u001b[39m2000\u001b[39m\u001b[39m+\u001b[39m\u001b[39mint\u001b[39m(ds[\u001b[39m-\u001b[39m\u001b[39m5\u001b[39m:\u001b[39m-\u001b[39m\u001b[39m3\u001b[39m]) \u001b[39mfor\u001b[39;00m i \u001b[39min\u001b[39;00m eurostat\u001b[39m.\u001b[39mget_pars(ds)], \n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m     25\u001b[0m             \u001b[39m'\u001b[39m\u001b[39mUniques\u001b[39m\u001b[39m'\u001b[39m: [eurostat\u001b[39m.\u001b[39mget_par_values(ds, i) \u001b[39mfor\u001b[39;00m i \u001b[39min\u001b[39;00m  eurostat\u001b[39m.\u001b[39mget_pars(ds)]\n\u001b[1;32m     26\u001b[0m             })\n\u001b[1;32m     27\u001b[0m         df \u001b[39m=\u001b[39m pd\u001b[39m.\u001b[39mconcat([df, dftemp], ignore_index\u001b[39m=\u001b[39m\u001b[39mTrue\u001b[39;00m)\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'db' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    " db= [\"EARN_SES06_14\",\"EARN_SES10_14\",\"EARN_SES14_14\",\"EARN_SES18_14\"]\n",
+    "\n",
+    "import utilities as u\n",
+    "u.wageget(db)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 92,
    "metadata": {},
    "outputs": [
