--- a/Code/Data_Discovrery_Wages.ipynb
+++ b/Code/Data_Discovrery_Wages.ipynb
@@ -42,17 +42,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "#Packages\n",
     "\n",
     "import pandas as pd\n",
+    "import utilities as util\n",
     "import eurostat\n",
     "import os\n",
     "\n",
     "#Variables\n",
+    "\n",
     "\n",
     "dl=os.getcwd()[:-32]+'Data/Technology-Trade-Employment'\n",
     "EARN_SES_14=[\"EARN_SES06_14\",\"EARN_SES10_14\",\"EARN_SES14_14\",\"EARN_SES18_14\"]\n",
@@ -117,35 +119,379 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {},
+   "execution_count": 2,
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'db' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[20], line 4\u001b[0m\n\u001b[1;32m      1\u001b[0m db\u001b[39m=\u001b[39m [\u001b[39m\"\u001b[39m\u001b[39mEARN_SES06_14\u001b[39m\u001b[39m\"\u001b[39m,\u001b[39m\"\u001b[39m\u001b[39mEARN_SES10_14\u001b[39m\u001b[39m\"\u001b[39m,\u001b[39m\"\u001b[39m\u001b[39mEARN_SES14_14\u001b[39m\u001b[39m\"\u001b[39m,\u001b[39m\"\u001b[39m\u001b[39mEARN_SES18_14\u001b[39m\u001b[39m\"\u001b[39m]\n\u001b[1;32m      3\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mutilities\u001b[39;00m \u001b[39mas\u001b[39;00m \u001b[39mu\u001b[39;00m\n\u001b[0;32m----> 4\u001b[0m u\u001b[39m.\u001b[39;49mwageget(db)\n",
-      "File \u001b[0;32m~/Github/Technology Trade Employment/Code/utilities.py:19\u001b[0m, in \u001b[0;36mwageget\u001b[0;34m(bd)\u001b[0m\n\u001b[1;32m     17\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mwageget\u001b[39m(bd):\n\u001b[1;32m     18\u001b[0m     df\u001b[39m=\u001b[39mpd\u001b[39m.\u001b[39mDataFrame()\n\u001b[0;32m---> 19\u001b[0m     \u001b[39mfor\u001b[39;00m ds \u001b[39min\u001b[39;00m db:\n\u001b[1;32m     20\u001b[0m         dftemp \u001b[39m=\u001b[39m pd\u001b[39m.\u001b[39mDataFrame({\n\u001b[1;32m     21\u001b[0m             \u001b[39m'\u001b[39m\u001b[39mDataset\u001b[39m\u001b[39m'\u001b[39m: [ds \u001b[39mfor\u001b[39;00m i \u001b[39min\u001b[39;00m eurostat\u001b[39m.\u001b[39mget_pars(ds)],\n\u001b[1;32m     22\u001b[0m             \u001b[39m'\u001b[39m\u001b[39mYear\u001b[39m\u001b[39m'\u001b[39m: [ \u001b[39m2000\u001b[39m\u001b[39m+\u001b[39m\u001b[39mint\u001b[39m(ds[\u001b[39m-\u001b[39m\u001b[39m5\u001b[39m:\u001b[39m-\u001b[39m\u001b[39m3\u001b[39m]) \u001b[39mfor\u001b[39;00m i \u001b[39min\u001b[39;00m eurostat\u001b[39m.\u001b[39mget_pars(ds)], \n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m     25\u001b[0m             \u001b[39m'\u001b[39m\u001b[39mUniques\u001b[39m\u001b[39m'\u001b[39m: [eurostat\u001b[39m.\u001b[39mget_par_values(ds, i) \u001b[39mfor\u001b[39;00m i \u001b[39min\u001b[39;00m  eurostat\u001b[39m.\u001b[39mget_pars(ds)]\n\u001b[1;32m     26\u001b[0m             })\n\u001b[1;32m     27\u001b[0m         df \u001b[39m=\u001b[39m pd\u001b[39m.\u001b[39mconcat([df, dftemp], ignore_index\u001b[39m=\u001b[39m\u001b[39mTrue\u001b[39;00m)\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'db' is not defined"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Dataset</th>\n",
+       "      <th>Year</th>\n",
+       "      <th>Category</th>\n",
+       "      <th>#ofUniques</th>\n",
+       "      <th>Uniques</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>EARN_SES06_14</td>\n",
+       "      <td>2006</td>\n",
+       "      <td>freq</td>\n",
+       "      <td>1</td>\n",
+       "      <td>[A]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>EARN_SES06_14</td>\n",
+       "      <td>2006</td>\n",
+       "      <td>sizeclas</td>\n",
+       "      <td>2</td>\n",
+       "      <td>[TOTAL, GE10]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>EARN_SES06_14</td>\n",
+       "      <td>2006</td>\n",
+       "      <td>age</td>\n",
+       "      <td>7</td>\n",
+       "      <td>[TOTAL, Y_LT30, Y30-39, Y40-49, Y50-59, Y_GE60...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>EARN_SES06_14</td>\n",
+       "      <td>2006</td>\n",
+       "      <td>unit</td>\n",
+       "      <td>3</td>\n",
+       "      <td>[EUR, PPS, PC]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>EARN_SES06_14</td>\n",
+       "      <td>2006</td>\n",
+       "      <td>isco88</td>\n",
+       "      <td>14</td>\n",
+       "      <td>[TOTAL, ISCO1-5, ISCO1, ISCO2, ISCO3, ISCO4, I...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>EARN_SES06_14</td>\n",
+       "      <td>2006</td>\n",
+       "      <td>indic_se</td>\n",
+       "      <td>4</td>\n",
+       "      <td>[ERN, E_F_M_PC, OPAY, OP_E_PC]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>EARN_SES06_14</td>\n",
+       "      <td>2006</td>\n",
+       "      <td>sex</td>\n",
+       "      <td>3</td>\n",
+       "      <td>[T, M, F]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>EARN_SES06_14</td>\n",
+       "      <td>2006</td>\n",
+       "      <td>geo</td>\n",
+       "      <td>35</td>\n",
+       "      <td>[EU27_2007, EU25, EU15, EA16, EA13, BE, BG, CZ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>EARN_SES10_14</td>\n",
+       "      <td>2010</td>\n",
+       "      <td>freq</td>\n",
+       "      <td>1</td>\n",
+       "      <td>[A]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>EARN_SES10_14</td>\n",
+       "      <td>2010</td>\n",
+       "      <td>currency</td>\n",
+       "      <td>3</td>\n",
+       "      <td>[EUR, PPS, PC]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>EARN_SES10_14</td>\n",
+       "      <td>2010</td>\n",
+       "      <td>indic_se</td>\n",
+       "      <td>4</td>\n",
+       "      <td>[ERN, E_F_M_PC, OPAY, OP_E_PC]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>EARN_SES10_14</td>\n",
+       "      <td>2010</td>\n",
+       "      <td>sizeclas</td>\n",
+       "      <td>2</td>\n",
+       "      <td>[TOTAL, GE10]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>EARN_SES10_14</td>\n",
+       "      <td>2010</td>\n",
+       "      <td>isco08</td>\n",
+       "      <td>13</td>\n",
+       "      <td>[TOTAL, OC1-5, OC1, OC2, OC3, OC4, OC5, OC6, O...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>EARN_SES10_14</td>\n",
+       "      <td>2010</td>\n",
+       "      <td>age</td>\n",
+       "      <td>6</td>\n",
+       "      <td>[TOTAL, Y_LT30, Y30-39, Y40-49, Y50-59, Y_GE60]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>EARN_SES10_14</td>\n",
+       "      <td>2010</td>\n",
+       "      <td>sex</td>\n",
+       "      <td>3</td>\n",
+       "      <td>[T, M, F]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>EARN_SES10_14</td>\n",
+       "      <td>2010</td>\n",
+       "      <td>geo</td>\n",
+       "      <td>40</td>\n",
+       "      <td>[EU28, EU27_2007, EU25, EU15, EA17, EA16, EA13...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>EARN_SES14_14</td>\n",
+       "      <td>2014</td>\n",
+       "      <td>freq</td>\n",
+       "      <td>1</td>\n",
+       "      <td>[A]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>EARN_SES14_14</td>\n",
+       "      <td>2014</td>\n",
+       "      <td>currency</td>\n",
+       "      <td>4</td>\n",
+       "      <td>[EUR, PPS, PC, NAC]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>EARN_SES14_14</td>\n",
+       "      <td>2014</td>\n",
+       "      <td>indic_se</td>\n",
+       "      <td>4</td>\n",
+       "      <td>[ERN, E_F_M_PC, OPAY, OP_E_PC]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>EARN_SES14_14</td>\n",
+       "      <td>2014</td>\n",
+       "      <td>sizeclas</td>\n",
+       "      <td>2</td>\n",
+       "      <td>[TOTAL, GE10]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20</th>\n",
+       "      <td>EARN_SES14_14</td>\n",
+       "      <td>2014</td>\n",
+       "      <td>isco08</td>\n",
+       "      <td>13</td>\n",
+       "      <td>[TOTAL, OC1-5, OC1, OC2, OC3, OC4, OC5, OC6, O...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21</th>\n",
+       "      <td>EARN_SES14_14</td>\n",
+       "      <td>2014</td>\n",
+       "      <td>age</td>\n",
+       "      <td>8</td>\n",
+       "      <td>[TOTAL, Y_LT30, Y30-39, Y30-49, Y40-49, Y50-59...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>22</th>\n",
+       "      <td>EARN_SES14_14</td>\n",
+       "      <td>2014</td>\n",
+       "      <td>sex</td>\n",
+       "      <td>3</td>\n",
+       "      <td>[T, M, F]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>23</th>\n",
+       "      <td>EARN_SES14_14</td>\n",
+       "      <td>2014</td>\n",
+       "      <td>geo</td>\n",
+       "      <td>40</td>\n",
+       "      <td>[EU28, EU27_2007, EA19, EA18, EA17, BE, BG, CZ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>24</th>\n",
+       "      <td>EARN_SES18_14</td>\n",
+       "      <td>2018</td>\n",
+       "      <td>freq</td>\n",
+       "      <td>1</td>\n",
+       "      <td>[A]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25</th>\n",
+       "      <td>EARN_SES18_14</td>\n",
+       "      <td>2018</td>\n",
+       "      <td>age</td>\n",
+       "      <td>5</td>\n",
+       "      <td>[TOTAL, Y_LT30, Y30-49, Y_GE50, UNK]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>26</th>\n",
+       "      <td>EARN_SES18_14</td>\n",
+       "      <td>2018</td>\n",
+       "      <td>indic_se</td>\n",
+       "      <td>3</td>\n",
+       "      <td>[ERN, OPAY, OP_E_PC]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>27</th>\n",
+       "      <td>EARN_SES18_14</td>\n",
+       "      <td>2018</td>\n",
+       "      <td>isco08</td>\n",
+       "      <td>14</td>\n",
+       "      <td>[TOTAL, OC1-5, OC1, OC2, OC3, OC4, OC5, OC6-8,...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>28</th>\n",
+       "      <td>EARN_SES18_14</td>\n",
+       "      <td>2018</td>\n",
+       "      <td>sex</td>\n",
+       "      <td>3</td>\n",
+       "      <td>[T, M, F]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>29</th>\n",
+       "      <td>EARN_SES18_14</td>\n",
+       "      <td>2018</td>\n",
+       "      <td>sizeclas</td>\n",
+       "      <td>2</td>\n",
+       "      <td>[TOTAL, GE10]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>30</th>\n",
+       "      <td>EARN_SES18_14</td>\n",
+       "      <td>2018</td>\n",
+       "      <td>unit</td>\n",
+       "      <td>4</td>\n",
+       "      <td>[EUR, NAC, PPS, PC]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>31</th>\n",
+       "      <td>EARN_SES18_14</td>\n",
+       "      <td>2018</td>\n",
+       "      <td>geo</td>\n",
+       "      <td>41</td>\n",
+       "      <td>[EU27_2020, EU28, EU27_2007, EA19, EA18, EA17,...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          Dataset  Year  Category  #ofUniques   \n",
+       "0   EARN_SES06_14  2006      freq           1  \\\n",
+       "1   EARN_SES06_14  2006  sizeclas           2   \n",
+       "2   EARN_SES06_14  2006       age           7   \n",
+       "3   EARN_SES06_14  2006      unit           3   \n",
+       "4   EARN_SES06_14  2006    isco88          14   \n",
+       "5   EARN_SES06_14  2006  indic_se           4   \n",
+       "6   EARN_SES06_14  2006       sex           3   \n",
+       "7   EARN_SES06_14  2006       geo          35   \n",
+       "8   EARN_SES10_14  2010      freq           1   \n",
+       "9   EARN_SES10_14  2010  currency           3   \n",
+       "10  EARN_SES10_14  2010  indic_se           4   \n",
+       "11  EARN_SES10_14  2010  sizeclas           2   \n",
+       "12  EARN_SES10_14  2010    isco08          13   \n",
+       "13  EARN_SES10_14  2010       age           6   \n",
+       "14  EARN_SES10_14  2010       sex           3   \n",
+       "15  EARN_SES10_14  2010       geo          40   \n",
+       "16  EARN_SES14_14  2014      freq           1   \n",
+       "17  EARN_SES14_14  2014  currency           4   \n",
+       "18  EARN_SES14_14  2014  indic_se           4   \n",
+       "19  EARN_SES14_14  2014  sizeclas           2   \n",
+       "20  EARN_SES14_14  2014    isco08          13   \n",
+       "21  EARN_SES14_14  2014       age           8   \n",
+       "22  EARN_SES14_14  2014       sex           3   \n",
+       "23  EARN_SES14_14  2014       geo          40   \n",
+       "24  EARN_SES18_14  2018      freq           1   \n",
+       "25  EARN_SES18_14  2018       age           5   \n",
+       "26  EARN_SES18_14  2018  indic_se           3   \n",
+       "27  EARN_SES18_14  2018    isco08          14   \n",
+       "28  EARN_SES18_14  2018       sex           3   \n",
+       "29  EARN_SES18_14  2018  sizeclas           2   \n",
+       "30  EARN_SES18_14  2018      unit           4   \n",
+       "31  EARN_SES18_14  2018       geo          41   \n",
+       "\n",
+       "                                              Uniques  \n",
+       "0                                                 [A]  \n",
+       "1                                       [TOTAL, GE10]  \n",
+       "2   [TOTAL, Y_LT30, Y30-39, Y40-49, Y50-59, Y_GE60...  \n",
+       "3                                      [EUR, PPS, PC]  \n",
+       "4   [TOTAL, ISCO1-5, ISCO1, ISCO2, ISCO3, ISCO4, I...  \n",
+       "5                      [ERN, E_F_M_PC, OPAY, OP_E_PC]  \n",
+       "6                                           [T, M, F]  \n",
+       "7   [EU27_2007, EU25, EU15, EA16, EA13, BE, BG, CZ...  \n",
+       "8                                                 [A]  \n",
+       "9                                      [EUR, PPS, PC]  \n",
+       "10                     [ERN, E_F_M_PC, OPAY, OP_E_PC]  \n",
+       "11                                      [TOTAL, GE10]  \n",
+       "12  [TOTAL, OC1-5, OC1, OC2, OC3, OC4, OC5, OC6, O...  \n",
+       "13    [TOTAL, Y_LT30, Y30-39, Y40-49, Y50-59, Y_GE60]  \n",
+       "14                                          [T, M, F]  \n",
+       "15  [EU28, EU27_2007, EU25, EU15, EA17, EA16, EA13...  \n",
+       "16                                                [A]  \n",
+       "17                                [EUR, PPS, PC, NAC]  \n",
+       "18                     [ERN, E_F_M_PC, OPAY, OP_E_PC]  \n",
+       "19                                      [TOTAL, GE10]  \n",
+       "20  [TOTAL, OC1-5, OC1, OC2, OC3, OC4, OC5, OC6, O...  \n",
+       "21  [TOTAL, Y_LT30, Y30-39, Y30-49, Y40-49, Y50-59...  \n",
+       "22                                          [T, M, F]  \n",
+       "23  [EU28, EU27_2007, EA19, EA18, EA17, BE, BG, CZ...  \n",
+       "24                                                [A]  \n",
+       "25               [TOTAL, Y_LT30, Y30-49, Y_GE50, UNK]  \n",
+       "26                               [ERN, OPAY, OP_E_PC]  \n",
+       "27  [TOTAL, OC1-5, OC1, OC2, OC3, OC4, OC5, OC6-8,...  \n",
+       "28                                          [T, M, F]  \n",
+       "29                                      [TOTAL, GE10]  \n",
+       "30                                [EUR, NAC, PPS, PC]  \n",
+       "31  [EU27_2020, EU28, EU27_2007, EA19, EA18, EA17,...  "
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "db= [\"EARN_SES06_14\",\"EARN_SES10_14\",\"EARN_SES14_14\",\"EARN_SES18_14\"]\n",
-    "\n",
-    "import utilities as u\n",
-    "u.cat_describer(db)"
+    "util.cat_describer(db)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "attachments": {},
