--- a/Code/Data_Discovrery_Wages.ipynb
+++ b/Code/Data_Discovrery_Wages.ipynb
@@ -741,7 +741,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "KeyError",
+     "evalue": "\"None of ['Dataset', 'Year'] are in the columns\"",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[2], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m wages\u001b[39m.\u001b[39;49mcat_describer([\u001b[39m'\u001b[39;49m\u001b[39mEARN_SES06_14\u001b[39;49m\u001b[39m'\u001b[39;49m],[\u001b[39m'\u001b[39;49m\u001b[39mage\u001b[39;49m\u001b[39m'\u001b[39;49m])\n",
+      "File \u001b[0;32m~/Github/Technology Trade Employment/Code/Utilities/wages.py:55\u001b[0m, in \u001b[0;36mcat_describer\u001b[0;34m(db, pars)\u001b[0m\n\u001b[1;32m     52\u001b[0m         \u001b[39mexcept\u001b[39;00m:\n\u001b[1;32m     53\u001b[0m             \u001b[39mpass\u001b[39;00m\n\u001b[0;32m---> 55\u001b[0m df\u001b[39m.\u001b[39;49mset_index([\u001b[39m'\u001b[39;49m\u001b[39mDataset\u001b[39;49m\u001b[39m'\u001b[39;49m,\u001b[39m'\u001b[39;49m\u001b[39mYear\u001b[39;49m\u001b[39m'\u001b[39;49m])\n\u001b[1;32m     56\u001b[0m \u001b[39mreturn\u001b[39;00m df\n",
+      "File \u001b[0;32m~/Library/Python/3.9/lib/python/site-packages/pandas/core/frame.py:5867\u001b[0m, in \u001b[0;36mDataFrame.set_index\u001b[0;34m(self, keys, drop, append, inplace, verify_integrity)\u001b[0m\n\u001b[1;32m   5864\u001b[0m                 missing\u001b[39m.\u001b[39mappend(col)\n\u001b[1;32m   5866\u001b[0m \u001b[39mif\u001b[39;00m missing:\n\u001b[0;32m-> 5867\u001b[0m     \u001b[39mraise\u001b[39;00m \u001b[39mKeyError\u001b[39;00m(\u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mNone of \u001b[39m\u001b[39m{\u001b[39;00mmissing\u001b[39m}\u001b[39;00m\u001b[39m are in the columns\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[1;32m   5869\u001b[0m \u001b[39mif\u001b[39;00m inplace:\n\u001b[1;32m   5870\u001b[0m     frame \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\n",
+      "\u001b[0;31mKeyError\u001b[0m: \"None of ['Dataset', 'Year'] are in the columns\""
+     ]
+    }
+   ],
+   "source": [
+    "wages.cat_describer(['EARN_SES06_14'],['age'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -753,13 +776,26 @@
        " ('OP_E_PC', 'Overtime pay as a percentage of earnings')]"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "eurostat.get_dic('EARN_SES06_14','indic_se', full=False,)"
+    "eurostat.get_dic('EARN_SES06_14','indic_se', full=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "db=[\"EARN_SES_AGT14\"]\n",
+    "pars=['age']\n",
+    "ds=db[0]\n",
+    "ds=db[0]\n",
+    "eurostat.get_dic(ds,par, full=False)"
    ]
   },
   {
