--- a/Code/Data_Discovrery_Wages.ipynb
+++ b/Code/Data_Discovrery_Wages.ipynb
@@ -2442,7 +2442,7 @@
     "| Dataset Code  | Year | Description                                                                 | Main Source                                 | Source Definition                                                                |\n",
     "|---------------|------|--------------------------------------------------------------------------------|----------------------------------------|-----------------------------------------------------------------------|\n",
     "| EARN_SES_AGT14 | 2002 | Mean hourly earnings by sex, age, occupation    | The Structure of Earnings Survey (SES) | https://ec.europa.eu/eurostat/cache/metadata/en/earn_ses_esms.htm   |\n",
-    "| EARN_SES06_14 | 2006 | Mean hourly earnings by sex, age, occupation - NACE Rev. 1.1, C-O excluding    | The Structure of Earnings Survey (SES) | https://ec.europa.eu/eurostat/cache/metadata/en/earn_ses06_esms.htm   |\n",
+    "| EARN_SES06_14 | 2006 | Mean hourly earnings by sex, age, occupation - NACE Rev. 1.1, C-O excluding L   | The Structure of Earnings Survey (SES) | https://ec.europa.eu/eurostat/cache/metadata/en/earn_ses06_esms.htm   |\n",
     "| EARN_SES10_14 | 2010 | Mean hourly earnings by sex, age and occupation - NACE Rev. 2, B-S excluding O | The Structure of Earnings Survey (SES) | https://ec.europa.eu/eurostat/cache/metadata/en/earn_ses2010_esms.htm |\n",
     "| EARN_SES14_14 | 2014 | Mean hourly earnings by sex, age and occupation - NACE Rev. 2, B-S excluding O | The Structure of Earnings Survey (SES) | https://ec.europa.eu/eurostat/cache/metadata/en/earn_ses2014_esms.htm |\n",
     "| EARN_SES18_14 | 2018 | Mean hourly earnings by sex, age and occupation - NACE Rev. 2, B-S excluding O | The Structure of Earnings Survey (SES) | https://ec.europa.eu/eurostat/cache/metadata/en/earn_ses2018_esms.htm |\n",
@@ -3998,7 +3998,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -4035,12 +4035,6 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>(AL, Albania)</th>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "      <th>(AT, Austria)</th>\n",
        "      <td>5</td>\n",
        "      <td>5</td>\n",
@@ -4057,12 +4051,6 @@
        "      <td>5</td>\n",
        "      <td>5</td>\n",
        "      <td>5</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>(CH, Switzerland)</th>\n",
-       "      <td>3</td>\n",
-       "      <td>3</td>\n",
-       "      <td>3</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>(CY, Cyprus)</th>\n",
@@ -4089,48 +4077,6 @@
        "      <td>5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>(EA, Euro area (EA11-1999, EA12-2001, EA13-2007, EA15-2008, EA16-2009, EA17-2011, EA18-2014, EA19-2015, EA20-2023))</th>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>(EA12, Euro area - 12 countries (2001-2006))</th>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>(EA13, Euro area - 13 countries (2007))</th>\n",
-       "      <td>2</td>\n",
-       "      <td>2</td>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>(EA16, Euro area - 16 countries (2009-2010))</th>\n",
-       "      <td>2</td>\n",
-       "      <td>2</td>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>(EA17, Euro area - 17 countries (2011-2013))</th>\n",
-       "      <td>3</td>\n",
-       "      <td>3</td>\n",
-       "      <td>3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>(EA18, Euro area - 18 countries (2014))</th>\n",
-       "      <td>2</td>\n",
-       "      <td>2</td>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>(EA19, Euro area - 19 countries  (2015-2022))</th>\n",
-       "      <td>2</td>\n",
-       "      <td>2</td>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "      <th>(EE, Estonia)</th>\n",
        "      <td>5</td>\n",
        "      <td>5</td>\n",
@@ -4149,34 +4095,10 @@
        "      <td>5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>(EU15, European Union - 15 countries (1995-2004))</th>\n",
-       "      <td>3</td>\n",
-       "      <td>3</td>\n",
-       "      <td>3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>(EU25, European Union - 25 countries (2004-2006))</th>\n",
-       "      <td>3</td>\n",
-       "      <td>3</td>\n",
-       "      <td>3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "      <th>(EU27_2007, European Union - 27 countries (2007-2013))</th>\n",
        "      <td>4</td>\n",
        "      <td>4</td>\n",
        "      <td>4</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>(EU27_2020, European Union - 27 countries (from 2020))</th>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>(EU28, European Union - 28 countries (2013-2020))</th>\n",
-       "      <td>3</td>\n",
-       "      <td>3</td>\n",
-       "      <td>3</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>(FI, Finland)</th>\n",
@@ -4189,12 +4111,6 @@
        "      <td>5</td>\n",
        "      <td>5</td>\n",
        "      <td>5</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>(HR, Croatia)</th>\n",
-       "      <td>3</td>\n",
-       "      <td>3</td>\n",
-       "      <td>3</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>(HU, Hungary)</th>\n",
@@ -4239,18 +4155,6 @@
        "      <td>5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>(ME, Montenegro)</th>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>(MK, North Macedonia)</th>\n",
-       "      <td>3</td>\n",
-       "      <td>3</td>\n",
-       "      <td>3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "      <th>(MT, Malta)</th>\n",
        "      <td>5</td>\n",
        "      <td>5</td>\n",
@@ -4261,12 +4165,6 @@
        "      <td>5</td>\n",
        "      <td>5</td>\n",
        "      <td>5</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>(NMS10, New Member States - 10 countries (2004-2006))</th>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>(NO, Norway)</th>\n",
@@ -4291,12 +4189,6 @@
        "      <td>5</td>\n",
        "      <td>5</td>\n",
        "      <td>5</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>(RS, Serbia)</th>\n",
-       "      <td>2</td>\n",
-       "      <td>2</td>\n",
-       "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>(SE, Sweden)</th>\n",
@@ -4335,33 +4227,19 @@
       "text/plain": [
        "                                                    Dataset  Year  Category\n",
        "Descriptions                                                               \n",
-       "(AL, Albania)                                             1     1         1\n",
        "(AT, Austria)                                             5     5         5\n",
        "(BE, Belgium)                                             5     5         5\n",
        "(BG, Bulgaria)                                            5     5         5\n",
-       "(CH, Switzerland)                                         3     3         3\n",
        "(CY, Cyprus)                                              5     5         5\n",
        "(CZ, Czechia)                                             5     5         5\n",
        "(DE, Germany (until 1990 former territory of th...        5     5         5\n",
        "(DK, Denmark)                                             5     5         5\n",
-       "(EA, Euro area (EA11-1999, EA12-2001, EA13-2007...        1     1         1\n",
-       "(EA12, Euro area - 12 countries (2001-2006))              1     1         1\n",
-       "(EA13, Euro area - 13 countries (2007))                   2     2         2\n",
-       "(EA16, Euro area - 16 countries (2009-2010))              2     2         2\n",
-       "(EA17, Euro area - 17 countries (2011-2013))              3     3         3\n",
-       "(EA18, Euro area - 18 countries (2014))                   2     2         2\n",
-       "(EA19, Euro area - 19 countries  (2015-2022))             2     2         2\n",
        "(EE, Estonia)                                             5     5         5\n",
        "(EL, Greece)                                              5     5         5\n",
        "(ES, Spain)                                               5     5         5\n",
-       "(EU15, European Union - 15 countries (1995-2004))         3     3         3\n",
-       "(EU25, European Union - 25 countries (2004-2006))         3     3         3\n",
        "(EU27_2007, European Union - 27 countries (2007...        4     4         4\n",
-       "(EU27_2020, European Union - 27 countries (from...        1     1         1\n",
-       "(EU28, European Union - 28 countries (2013-2020))         3     3         3\n",
        "(FI, Finland)                                             5     5         5\n",
        "(FR, France)                                              5     5         5\n",
-       "(HR, Croatia)                                             3     3         3\n",
        "(HU, Hungary)                                             5     5         5\n",
        "(IE, Ireland)                                             5     5         5\n",
        "(IS, Iceland)                                             5     5         5\n",
@@ -4369,16 +4247,12 @@
        "(LT, Lithuania)                                           5     5         5\n",
        "(LU, Luxembourg)                                          5     5         5\n",
        "(LV, Latvia)                                              5     5         5\n",
-       "(ME, Montenegro)                                          1     1         1\n",
-       "(MK, North Macedonia)                                     3     3         3\n",
        "(MT, Malta)                                               5     5         5\n",
        "(NL, Netherlands)                                         5     5         5\n",
-       "(NMS10, New Member States - 10 countries (2004-...        1     1         1\n",
        "(NO, Norway)                                              5     5         5\n",
        "(PL, Poland)                                              5     5         5\n",
        "(PT, Portugal)                                            5     5         5\n",
        "(RO, Romania)                                             5     5         5\n",
-       "(RS, Serbia)                                              2     2         2\n",
        "(SE, Sweden)                                              5     5         5\n",
        "(SI, Slovenia)                                            5     5         5\n",
        "(SK, Slovakia)                                            5     5         5\n",
@@ -4386,13 +4260,36 @@
        "(UK, United Kingdom)                                      5     5         5"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "wages.cat_describer(EARN_SES_14,['geo']).groupby(['Descriptions']).count()"
+    "wages.cat_describer(EARN_SES_14,['geo']).groupby(['Descriptions']).count().query('Dataset>=4')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Dataset     31\n",
+       "Year        31\n",
+       "Category    31\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "wages.cat_describer(EARN_SES_14,['geo']).groupby(['Descriptions']).count().query('Dataset>=4').count()"
    ]
   },
   {
@@ -4415,6 +4312,7 @@
     }
    ],
    "source": [
+    "\n",
     "eurostat.get_dic('EARN_SES06_14','indic_se', full=False)"
    ]
   },
