--- a/Code/Data_Discovrery_Wages.ipynb
+++ b/Code/Data_Discovrery_Wages.ipynb
@@ -97,7 +97,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### <span style=\"color:#b70101\">**Mean hourly earnings by sex, economic activity and occupation (EARN_SES_47)**</span>"
+    "### <span style=\"color:#900a37\">**Mean hourly earnings by sex, economic activity and occupation (EARN_SES_47)**</span>"
    ]
   },
   {
@@ -2422,6 +2422,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Clear literature review\n",
+    "\n",
+    "Previous job allign\n",
+    "\n",
+    "Simple models one by one assumption\n",
+    "\n",
+    "\n"
+   ]
   },
   {
    "attachments": {},
