--- a/Code/Discovrery_Wages.ipynb
+++ b/Code/Discovrery_Wages.ipynb
@@ -4380,6 +4380,41 @@
    "source": [
     "df.query('f == \"s\"').groupby(['geo\\TIME_PERIOD'])['unit'].count()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1800000"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "50*60*60*10"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " hello 3\n"
+     ]
+    }
+   ],
+   "source": []
   }
  ],
  "metadata": {
